--- a/src/Resources/Locales/zh_CN.xaml
+++ b/src/Resources/Locales/zh_CN.xaml
@@ -363,6 +363,7 @@
     <sys:String x:Key="Text.Preference.Git">GIT配置</sys:String>
     <sys:String x:Key="Text.Preference.Git.Path">安装路径</sys:String>
     <sys:String x:Key="Text.Preference.Git.Path.Placeholder">填写git.exe所在位置</sys:String>
+    <sys:String x:Key="Text.Preference.Git.Version">Git 版本</sys:String>
     <sys:String x:Key="Text.Preference.Git.Dir">默认克隆路径</sys:String>
     <sys:String x:Key="Text.Preference.Git.Dir.Placeholder">默认的仓库本地存放位置</sys:String>
     <sys:String x:Key="Text.Preference.Git.User">用户名</sys:String>
